{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 38,
  "lineage": "f35d4266-adce-68dc-b8f2-8d705bb230b8",
  "resources": [
    {
      "module": "module.aws_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a4136a64fd45dfc",
            "domain": "vpc",
            "id": "eipalloc-04a4136a64fd45dfc",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-204-80-133.compute-1.amazonaws.com",
            "public_ip": "18.204.80.133",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "zach_vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "zach_vpc-us-east-1a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.aws_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:249153082193:internet-gateway/igw-067ae1c96c288e7ca",
            "id": "igw-067ae1c96c288e7ca",
            "owner_id": "249153082193",
            "tags": {
              "Name": "zach_vpc"
            },
            "tags_all": {
              "Name": "zach_vpc"
            },
            "vpc_id": "vpc-0e3e4cd5f9186edc6"
          },
          "dependencies": [
            "module.aws_vpc.module.vpc.aws_vpc.this",
            "module.aws_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a4136a64fd45dfc",
            "connectivity_type": "public",
            "id": "nat-06d2149f235695892",
            "network_interface_id": "eni-02b7d3b265fd9cef8",
            "private_ip": "172.32.101.48",
            "public_ip": "18.204.80.133",
            "subnet_id": "subnet-0f756dfd10305b324",
            "tags": {
              "Name": "zach_vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "zach_vpc-us-east-1a"
            }
          },
          "dependencies": [
            "module.aws_vpc.module.vpc.aws_eip.nat",
            "module.aws_vpc.module.vpc.aws_internet_gateway.this",
            "module.aws_vpc.module.vpc.aws_subnet.public",
            "module.aws_vpc.module.vpc.aws_vpc.this",
            "module.aws_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01902a1cd167db0481080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06d2149f235695892",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01902a1cd167db048",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.module.vpc.aws_eip.nat",
            "module.aws_vpc.module.vpc.aws_internet_gateway.this",
            "module.aws_vpc.module.vpc.aws_nat_gateway.this",
            "module.aws_vpc.module.vpc.aws_route_table.private",
            "module.aws_vpc.module.vpc.aws_subnet.public",
            "module.aws_vpc.module.vpc.aws_vpc.this",
            "module.aws_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-067ae1c96c288e7ca",
            "id": "r-rtb-05bfd971f249e81ef1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05bfd971f249e81ef",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.module.vpc.aws_internet_gateway.this",
            "module.aws_vpc.module.vpc.aws_route_table.public",
            "module.aws_vpc.module.vpc.aws_vpc.this",
            "module.aws_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:249153082193:route-table/rtb-01902a1cd167db048",
            "id": "rtb-01902a1cd167db048",
            "owner_id": "249153082193",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "zach_vpc-private"
            },
            "tags_all": {
              "Name": "zach_vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3e4cd5f9186edc6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.module.vpc.aws_vpc.this",
            "module.aws_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:249153082193:route-table/rtb-05bfd971f249e81ef",
            "id": "rtb-05bfd971f249e81ef",
            "owner_id": "249153082193",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "zach_vpc-public"
            },
            "tags_all": {
              "Name": "zach_vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3e4cd5f9186edc6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.module.vpc.aws_vpc.this",
            "module.aws_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04eab6e201bad01a1",
            "route_table_id": "rtb-01902a1cd167db048",
            "subnet_id": "subnet-060494b45304685d2"
          },
          "dependencies": [
            "module.aws_vpc.module.vpc.aws_route_table.private",
            "module.aws_vpc.module.vpc.aws_subnet.private",
            "module.aws_vpc.module.vpc.aws_vpc.this",
            "module.aws_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc3497378dea98c9",
            "route_table_id": "rtb-01902a1cd167db048",
            "subnet_id": "subnet-0e9dde429c60e6d51"
          },
          "dependencies": [
            "module.aws_vpc.module.vpc.aws_route_table.private",
            "module.aws_vpc.module.vpc.aws_subnet.private",
            "module.aws_vpc.module.vpc.aws_vpc.this",
            "module.aws_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f82f00aab1da54c",
            "route_table_id": "rtb-05bfd971f249e81ef",
            "subnet_id": "subnet-0f756dfd10305b324"
          },
          "dependencies": [
            "module.aws_vpc.module.vpc.aws_route_table.public",
            "module.aws_vpc.module.vpc.aws_subnet.public",
            "module.aws_vpc.module.vpc.aws_vpc.this",
            "module.aws_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6a056124603ec33",
            "route_table_id": "rtb-05bfd971f249e81ef",
            "subnet_id": "subnet-0a6907bd4470e15d1"
          },
          "dependencies": [
            "module.aws_vpc.module.vpc.aws_route_table.public",
            "module.aws_vpc.module.vpc.aws_subnet.public",
            "module.aws_vpc.module.vpc.aws_vpc.this",
            "module.aws_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:249153082193:subnet/subnet-060494b45304685d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.32.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060494b45304685d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "249153082193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zach_vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "zach_vpc-private-us-east-1a"
            },
            "vpc_id": "vpc-0e3e4cd5f9186edc6"
          },
          "dependencies": [
            "module.aws_vpc.module.vpc.aws_vpc.this",
            "module.aws_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:249153082193:subnet/subnet-0e9dde429c60e6d51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.32.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9dde429c60e6d51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "249153082193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zach_vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "zach_vpc-private-us-east-1b"
            },
            "vpc_id": "vpc-0e3e4cd5f9186edc6"
          },
          "dependencies": [
            "module.aws_vpc.module.vpc.aws_vpc.this",
            "module.aws_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:249153082193:subnet/subnet-0f756dfd10305b324",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.32.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f756dfd10305b324",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "249153082193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zach_vpc-public-us-east-1a"
            },
            "tags_all": {
              "Name": "zach_vpc-public-us-east-1a"
            },
            "vpc_id": "vpc-0e3e4cd5f9186edc6"
          },
          "dependencies": [
            "module.aws_vpc.module.vpc.aws_vpc.this",
            "module.aws_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:249153082193:subnet/subnet-0a6907bd4470e15d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.32.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6907bd4470e15d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "249153082193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zach_vpc-public-us-east-1b"
            },
            "tags_all": {
              "Name": "zach_vpc-public-us-east-1b"
            },
            "vpc_id": "vpc-0e3e4cd5f9186edc6"
          },
          "dependencies": [
            "module.aws_vpc.module.vpc.aws_vpc.this",
            "module.aws_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:249153082193:vpc/vpc-0e3e4cd5f9186edc6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.32.0.0/16",
            "default_network_acl_id": "acl-0855a09105acd6f0e",
            "default_route_table_id": "rtb-0daaf6909d356a506",
            "default_security_group_id": "sg-0a652af9a55384cd3",
            "dhcp_options_id": "dopt-03bf1190ccaaf5aa7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e3e4cd5f9186edc6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0daaf6909d356a506",
            "owner_id": "249153082193",
            "tags": {
              "Name": "zach_vpc"
            },
            "tags_all": {
              "Name": "zach_vpc"
            }
          }
        }
      ]
    }
  ]
}